chore: updating code style